--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,4 +1,4 @@
-@import "mixin.scss";
+
 
 @font-face {
     font-family: 'belligerent_madnessregular';
@@ -12,6 +12,32 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'Muli';
+    src: url('fonts/Muli-Bold.eot');
+    src: url('fonts/Muli-Bold.eot?#iefix') format('embedded-opentype'),
+        url('fonts/Muli-Bold.woff2') format('woff2'),
+        url('fonts/Muli-Bold.woff') format('woff'),
+        url('fonts/Muli-Bold.ttf') format('truetype'),
+        url('fonts/Muli-Bold.svg#Muli-Bold') format('svg');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Muli';
+    src: url('fonts/Muli-Light.eot');
+    src: url('fonts/Muli-Light.eot?#iefix') format('embedded-opentype'),
+        url('fonts/Muli-Light.woff2') format('woff2'),
+        url('fonts/Muli-Light.woff') format('woff'),
+        url('fonts/Muli-Light.ttf') format('truetype'),
+        url('fonts/Muli-Light.svg#Muli-Light') format('svg');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
+
 html body{
     margin: 0;
     padding: 0;
@@ -23,6 +49,10 @@ $back-1:#CFD8DC;
 $back-button:#B36E99;
 
 /*All page*/
+
+*{
+    font-family: 'Muli';
+}
 
 .bloc_page{
     width: 100%;
@@ -38,61 +68,167 @@ a{
 /*header*/
 header{
     background-color:$back;
-    
-}
-header h2{
-    font-family:'belligerent_madnessregular', sans-serif ;
 }
 
-h1{
-    font-family:'belligerent_madnessregular', sans-serif ;
-    font-size: 40px;
-    margin: auto;
-}
 .banner{
     display: flex;
-    height: 130px;
+    height: 110px;
+    padding-top: 5%;   
     justify-content: center;
-    padding-top: 5%; 
 }
 
 .banner img{
-    justify-content: center;
-    width: 80px;
-    height: 80px;
+    width: 100px;
+    height: 100px;
     margin-left: 3%;
 }
 
 .title{
-    margin: auto;
     text-align: center;
-    margin-top: 4%;
     margin-right: 3%;
+    margin-top: -2%;
+}
+
+h1{
     margin-bottom: 0;
+}
+
+h1 a{
+    font-family:'belligerent_madnessregular', sans-serif ;
+    font-size: 40px;
+    margin: auto;
 }
 
 .title p{
     font-size: 14px;
     font-family: 'belligerent_madnessregular', sans-serif;
     margin-top: 0;
-    margin-bottom: 0;
 }
 
-ul{
+header ul{
     list-style: none;
-    display: flex;  
-    justify-content: space-around;
     margin-top: -5%;
     margin-bottom: 0;
     padding-left: 0;
+    font-size:16px ;
+    
 }
 
 ul li{
     padding-bottom: 5%;
 }
 
+ul a:hover{
+    text-decoration: underline $back-button;
+    color: $back-button;
+}
+
+nav{
+    background: url("images/separateur.png") repeat-x bottom;
+}
+
+/*Menu déroulant burger*/
+
+.toggle_btn{
+    height: 30px;
+    width: 30px;
+    position: relative;
+    float: right;
+    margin-right: 20px;
+    margin-top: 8px;
+    cursor: pointer;    
+}
+
+.toggle_btn span{
+    height: 2px;
+    background-color:$back-button;
+    width: 100%;
+    position: absolute;
+    top: 20px;
+    left: 0;
+}
+
+.toggle_btn span:before{
+    content: '';
+    height: 2.2px;
+    background-color: $back-button;
+    width: 100%;
+    position: absolute;
+    top: -10px;
+    left: 0;
+}
+.toggle_btn span:after{
+    content: '';
+    height: 2.2px;
+    background-color: $back-button;
+    width: 100%;
+    position: absolute;
+    top: 10px;
+    left: 0;
+}
+
+.menu{
+    height: 50px;
+    background-color:$back;
+    width: 200px;
+}
+
+.menu a{
+    color: $back-button;
+    text-align: center;
+    display: block;
+    height: auto;  
+}
+
+.firstmenu{
+    padding-top: 20%;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 18px;
+    text-decoration: underline;
+    font-family: 'Muli';
+}
+
+.nav{
+    margin-left: -200px;
+    transition-duration: 0.2s;
+    background: url("images/separateur.png") repeat-x bottom;
+}
+
+.nav_open{
+    margin-left: 0;
+    transition-duration: 0.2s;
+    height: auto;
+    width: 100%;
+    
+}
+
+.nav_cross span{
+    background-color: transparent;
+}
+
+.nav_cross span:before{
+    transform: translateY(10px) rotateZ(45deg);
+}
+.nav_cross span:after{
+    transform: translateY(-9.5px) rotateZ(-45deg);
+}
 
 /*section*/
+
+button{
+    margin-left: 6%;
+    border-radius: 5px;
+    background-color:$back-button;
+    font-size: 15px;
+    margin-top: 4%;
+    margin-bottom: 0;
+    padding: 0.25rem 1rem 0.4rem 1rem;
+
+    a{
+        color: $back;
+    }
+}
 
 .teddies{
     background-color: $back-1;
@@ -106,7 +242,7 @@ ul li{
     
     img{
         height: 160px;
-        margin: 5% 4% 5% 7%;
+        margin: 8% 4% 7% 7%;
         border-radius: 10px;
     }
 }
@@ -122,28 +258,54 @@ ul li{
     margin-bottom: 0;
     padding-bottom: 0;
     text-align: center;
+}
 
+.teddies hr{
+    width: 80px;
+    height: 0.75px;
+    background-color: $back-button;
 }
 
 /*footer*/
 
 footer{
-    background-color:$back;
     
+    background: url("images/separateur.png") repeat-x top;
+    background-color:$back;
 
     h2{
-        margin-bottom: 0;
         text-align: center;
-        font-size: 20px;
-        padding-bottom: 5%;
+        margin-bottom: 0;
+        padding-top: 5%;
+        text-transform: uppercase;
+        font-size: 16px;
     }
+    
+}
+
+footer hr{
+    width: 80px;
+    height: 0.75px;
+    background-color: $back-button;
+}
+
+footer ul{
+    list-style-type: none;
+    text-transform: uppercase;
+    font-size: 14px;
+    margin-bottom: 0;
 }
 
 footer p{
-    margin-top: 0;
     text-align: center;
-    font-size: 14px;
-    padding-top: 2%;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-bottom: 5%;
+}
+
+.pay{
+    text-align: center;
+    padding-bottom: 3%;
 }
 
 /*Pages produits*/
@@ -154,8 +316,8 @@ footer p{
     height:auto;
     margin: auto;
     box-shadow: 1px 1px 10px 1px #BDBDBD;
-    margin-top: 5%;
-    margin-bottom: 5%;
+    margin-top: 4%;
+    margin-bottom: 4%;
     border-radius: 10px;
     padding-bottom: 5%;
     
@@ -192,18 +354,16 @@ hr{
     font-size: 18px;
 }
 
-form{
-    background-color: $back-1;
-}
-
 input[type="button" i]{
-    margin-left: 13%;
+    margin: auto;
+    display: block;
     border-radius: 5px;
     color: $back;
     background-color:$back-button;
-    font-size: 25px;
-    margin-top: 5%;
-    margin-bottom: 5%;
+    font-size: 20px;
+    margin-top: 8%;
+    margin-bottom: 3%;
+    padding: 1% 3% 2% 3%;
     
 }
 
@@ -214,10 +374,88 @@ select {
 }
 
 label{
-    font-size: 16px;
+    font-size: 15px;
     font-weight: bold;
 }
 /*Panier*/
 .required{
     color: red;
 }
+
+.infos{
+    border:1px solid ;
+    margin-bottom: 6%;
+
+    p{
+    padding-left: 6%;   
+    }
+}
+
+.adress{
+    border:1px solid;
+    margin-bottom: 6%;
+
+    p{
+    padding-left: 6%;
+    }
+}
+
+input[type="submit" i]{
+    margin: auto;
+    display: block;
+    border-radius: 5px;
+    color: $back;
+    background-color:$back-button;
+    font-size: 20px;
+    margin-top: 0;
+    padding: 1% 3% 2% 3%;
+}
+
+.recap{
+    padding-left: 6%;
+    padding-right: 6%;
+    width:auto;
+    
+    h2{
+        text-align: center;
+        margin-top: 5%;
+        text-transform: uppercase;
+        font-size: 18px;
+        color: $back-button;
+    }
+}
+
+.recap h3{
+    text-decoration: underline;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 16px;
+}
+
+.basket{
+    border:1px solid ;
+    margin-bottom: 6%;
+}
+
+.form{
+    padding-left: 6%;
+    padding-right: 6%;
+    width:auto;
+    
+    h2{
+        text-align: center;
+        margin-top: 5%;
+        text-transform: uppercase;
+        font-size: 18px;
+        color: $back-button;
+    }
+}
+
+.form h3{
+    text-decoration: underline;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 16px;
+}
+
+@import "media.scss";
