--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -140,7 +140,7 @@ nav{
 }
 
 .toggle_btn span{
-    height: 2px;
+    height: 2.5px;
     background-color:$back-button;
     width: 100%;
     position: absolute;
@@ -150,7 +150,7 @@ nav{
 
 .toggle_btn span:before{
     content: '';
-    height: 2.2px;
+    height: 3px;
     background-color: $back-button;
     width: 100%;
     position: absolute;
@@ -159,7 +159,7 @@ nav{
 }
 .toggle_btn span:after{
     content: '';
-    height: 2.2px;
+    height: 3px;
     background-color: $back-button;
     width: 100%;
     position: absolute;
@@ -215,20 +215,6 @@ nav{
 }
 
 /*section*/
-
-button{
-    margin-left: 6%;
-    border-radius: 5px;
-    background-color:$back-button;
-    font-size: 15px;
-    margin-top: 4%;
-    margin-bottom: 0;
-    padding: 0.25rem 1rem 0.4rem 1rem;
-
-    a{
-        color: $back;
-    }
-}
 
 .teddies{
     background-color: $back-1;
@@ -310,6 +296,20 @@ footer p{
 
 /*Pages produits*/
 
+button{
+    margin-left: 6%;
+    border-radius: 5px;
+    background-color:$back-button;
+    font-size: 15px;
+    margin-top: 4%;
+    margin-bottom: 0;
+    padding: 0.25rem 1rem 0.4rem 1rem;
+
+    a{
+        color: $back;
+    }
+}
+
 .bear{
     background-color: $back-1;
     width:280px;
@@ -385,6 +385,8 @@ label{
 .infos{
     border:1px solid ;
     margin-bottom: 6%;
+    padding-top: 2%;
+    padding-bottom: 4%;
 
     p{
     padding-left: 6%;   
@@ -393,7 +395,9 @@ label{
 
 .adress{
     border:1px solid;
-    margin-bottom: 6%;
+    margin-bottom: 3%;
+    padding-top: 2%;
+    padding-bottom: 4%;
 
     p{
     padding-left: 6%;
@@ -409,6 +413,7 @@ input[type="submit" i]{
     font-size: 20px;
     margin-top: 0;
     padding: 1% 3% 2% 3%;
+    margin-bottom: 3%;
 }
 
 .recap{
@@ -458,4 +463,255 @@ input[type="submit" i]{
     font-size: 16px;
 }
 
-@import "media.scss";
+
+@media screen and (min-width: 400px){
+    /*header*/
+
+    .title{
+        margin-top: 0;
+    }
+}
+
+@media screen and (min-width: 460px){
+    /*header*/
+    
+    .banner{
+        padding-top: 3%;   
+    }
+
+    .banner img{
+        width: 110px;
+        height: 110px;
+    }
+
+    h1 a{
+        font-size: 45px;
+    }
+    
+    .title p{
+        font-size: 16px;
+    }
+}
+@media screen and (min-width: 550px){
+    /*header*/
+    
+    .banner{
+        padding-top: 1%;   
+    }
+
+    .banner img{
+        width: 120px;
+        height: 120px;
+    }
+
+    h1 a{
+        font-size: 50px;
+    }
+    
+    .title p{
+        font-size: 18px;
+    }
+
+    ul li{
+        padding-bottom: 2%;
+    }
+    .firstmenu{
+        padding-top: 10%;
+    }
+
+    /*section*/
+
+    .teddies{
+        width:500px;
+        height: 200px;
+    }
+
+    .teddies img{
+        margin: 4%;
+    }
+
+    .teddies h2{
+        margin-top: -30%;
+        margin-left: 55%;
+    }
+
+    .teddies hr{
+        margin-left: 69.5%;
+        margin-bottom: 2%;
+    }
+
+    .teddies p{
+        margin-left: 55%;
+    }
+
+     /*Pages produits*/
+
+     .bear{
+         width: 500px;
+
+         img{
+             height: 200px;
+             margin: 5% 20% 3% 20%;
+
+         }
+     }
+
+}
+@media screen and (min-width: 850px){
+    /*header*/
+
+    .banner{
+        padding-top: 0;   
+    }
+    
+    .banner img{
+        width: 130px;
+        height: 130px;
+    }
+
+    h1 a{
+        font-size: 55px;
+    }
+    
+    .title p{
+        font-size: 20px;
+    }
+
+    /*section*/
+
+    .teddies{
+        width:600px;
+        height: 200px;
+    }
+
+    .teddies img{
+        margin: 3.5%;
+    }
+
+    .teddies h2{
+        margin-top: -25%;
+        margin-left: 40%;
+    }
+
+    .teddies hr{
+        margin-top: -1%;
+        margin-bottom: 2%;
+        margin-left: 64%;
+    }
+
+    .teddies p{
+        margin-left: 40%;
+    }
+
+    /*Pages produits*/
+
+    button a{
+        font-size: 16px;
+    }
+
+    .bear{
+        width:600px;
+        margin-top: -3%;
+        margin-bottom: 4%;
+    
+        img{
+        height: 260px;
+        margin: 5% 20% 3% 22%;
+        border-radius: 10px;
+
+    }
+
+    label{
+        font-size: 18px;
+    }
+
+    input[type="button" i]{
+        font-size: 24px;
+        margin-top: 8%;
+        margin-bottom: 3%;
+        padding: 1% 3% 2% 3%;
+        
+    }
+    
+    select {
+        background-color:$back-1;
+        font-size: 17px;
+        border-radius: 5px;
+    }
+
+    /*footer*/
+
+    }
+
+}
+@media screen and (min-width: 1000px){
+    /*header*/
+    
+    .banner img{
+        width: 140px;
+        height: 140px;
+    }
+
+    h1 a{
+        font-size: 60px;
+    }
+    
+    .title p{
+        font-size: 22px;
+    }
+
+    /*section*/
+
+    .teddies{
+        width: 750px;
+        height: 200px;
+    }
+
+    .teddies img{
+        margin: 2.5%;
+    }
+
+    .teddies h2{
+        margin-top: -20%;
+        margin-left: 40%;
+    }
+
+    /*Pages produits*/
+
+    .bear{
+        width:750px;
+        margin-top: -3%;
+        margin-bottom: 4%;
+
+        img{
+            height: 300px;
+            margin: 5% 22% 3% 20%;
+        }
+    }
+
+    footer h2{
+        font-size: 20px;
+        padding-top: 2%;
+    }
+
+    footer ul{
+        font-size: 16px;
+        padding-left: 10%;
+    }
+
+    footer p{
+        padding-bottom: 2%;
+    }
+
+    .pay{
+        padding-top: 1%;
+        padding-bottom: 1%;
+
+        img{
+            height: 40px;
+            width: 60px;
+        }
+    }
+
+    
+}
