--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ nav {
 }
 
 .toggle_btn span {
-  height: 2px;
+  height: 2.5px;
   background-color: #B36E99;
   width: 100%;
   position: absolute;
@@ -126,7 +126,7 @@ nav {
 
 .toggle_btn span:before {
   content: "";
-  height: 2.2px;
+  height: 3px;
   background-color: #B36E99;
   width: 100%;
   position: absolute;
@@ -136,7 +136,7 @@ nav {
 
 .toggle_btn span:after {
   content: "";
-  height: 2.2px;
+  height: 3px;
   background-color: #B36E99;
   width: 100%;
   position: absolute;
@@ -192,19 +192,6 @@ nav {
 }
 
 /*section*/
-button {
-  margin-left: 6%;
-  border-radius: 5px;
-  background-color: #B36E99;
-  font-size: 15px;
-  margin-top: 4%;
-  margin-bottom: 0;
-  padding: 0.25rem 1rem 0.4rem 1rem;
-}
-button a {
-  color: #F3E9F1;
-}
-
 .teddies {
   background-color: #CFD8DC;
   width: 280px;
@@ -279,6 +266,19 @@ footer p {
 }
 
 /*Pages produits*/
+button {
+  margin-left: 6%;
+  border-radius: 5px;
+  background-color: #B36E99;
+  font-size: 15px;
+  margin-top: 4%;
+  margin-bottom: 0;
+  padding: 0.25rem 1rem 0.4rem 1rem;
+}
+button a {
+  color: #F3E9F1;
+}
+
 .bear {
   background-color: #CFD8DC;
   width: 280px;
@@ -351,6 +351,8 @@ label {
 .infos {
   border: 1px solid;
   margin-bottom: 6%;
+  padding-top: 2%;
+  padding-bottom: 4%;
 }
 .infos p {
   padding-left: 6%;
@@ -358,7 +360,9 @@ label {
 
 .adress {
   border: 1px solid;
-  margin-bottom: 6%;
+  margin-bottom: 3%;
+  padding-top: 2%;
+  padding-bottom: 4%;
 }
 .adress p {
   padding-left: 6%;
@@ -373,6 +377,7 @@ input[type=submit i] {
   font-size: 20px;
   margin-top: 0;
   padding: 1% 3% 2% 3%;
+  margin-bottom: 3%;
 }
 
 .recap {
@@ -471,6 +476,39 @@ input[type=submit i] {
   .firstmenu {
     padding-top: 10%;
   }
+
+  /*section*/
+  .teddies {
+    width: 500px;
+    height: 200px;
+  }
+
+  .teddies img {
+    margin: 4%;
+  }
+
+  .teddies h2 {
+    margin-top: -30%;
+    margin-left: 55%;
+  }
+
+  .teddies hr {
+    margin-left: 69.5%;
+    margin-bottom: 2%;
+  }
+
+  .teddies p {
+    margin-left: 55%;
+  }
+
+  /*Pages produits*/
+  .bear {
+    width: 500px;
+  }
+  .bear img {
+    height: 200px;
+    margin: 5% 20% 3% 20%;
+  }
 }
 @media screen and (min-width: 850px) {
   /*header*/
@@ -490,6 +528,62 @@ input[type=submit i] {
   .title p {
     font-size: 20px;
   }
+
+  /*section*/
+  .teddies {
+    width: 600px;
+    height: 200px;
+  }
+
+  .teddies img {
+    margin: 3.5%;
+  }
+
+  .teddies h2 {
+    margin-top: -25%;
+    margin-left: 40%;
+  }
+
+  .teddies hr {
+    margin-top: -1%;
+    margin-bottom: 2%;
+    margin-left: 64%;
+  }
+
+  .teddies p {
+    margin-left: 40%;
+  }
+
+  /*Pages produits*/
+  button a {
+    font-size: 16px;
+  }
+
+  .bear {
+    width: 600px;
+    margin-top: -3%;
+    margin-bottom: 4%;
+    /*footer*/
+  }
+  .bear img {
+    height: 260px;
+    margin: 5% 20% 3% 22%;
+    border-radius: 10px;
+  }
+  .bear label {
+    font-size: 18px;
+  }
+  .bear input[type=button i] {
+    font-size: 24px;
+    margin-top: 8%;
+    margin-bottom: 3%;
+    padding: 1% 3% 2% 3%;
+  }
+  .bear select {
+    background-color: #CFD8DC;
+    font-size: 17px;
+    border-radius: 5px;
+  }
 }
 @media screen and (min-width: 1000px) {
   /*header*/
@@ -504,6 +598,55 @@ input[type=submit i] {
 
   .title p {
     font-size: 22px;
+  }
+
+  /*section*/
+  .teddies {
+    width: 750px;
+    height: 200px;
+  }
+
+  .teddies img {
+    margin: 2.5%;
+  }
+
+  .teddies h2 {
+    margin-top: -20%;
+    margin-left: 40%;
+  }
+
+  /*Pages produits*/
+  .bear {
+    width: 750px;
+    margin-top: -3%;
+    margin-bottom: 4%;
+  }
+  .bear img {
+    height: 300px;
+    margin: 5% 22% 3% 20%;
+  }
+
+  footer h2 {
+    font-size: 20px;
+    padding-top: 2%;
+  }
+
+  footer ul {
+    font-size: 16px;
+    padding-left: 10%;
+  }
+
+  footer p {
+    padding-bottom: 2%;
+  }
+
+  .pay {
+    padding-top: 1%;
+    padding-bottom: 1%;
+  }
+  .pay img {
+    height: 40px;
+    width: 60px;
   }
 }
 
