--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -125,6 +125,18 @@ ul a:hover{
 
 nav{
     background: url("images/separateur.png") repeat-x bottom;
+    margin-top: 3%;
+}
+
+.icone_basket{
+    
+    text-align: right;
+
+    img{
+        height: 50px;
+        width: 50px;
+        margin-right: 2%;
+    }
 }
 
 /*Menu déroulant burger*/
@@ -133,8 +145,8 @@ nav{
     height: 30px;
     width: 30px;
     position: relative;
-    float: right;
-    margin-right: 20px;
+    float: left;
+    margin-left: 20px;
     margin-top: 8px;
     cursor: pointer;    
 }
@@ -168,7 +180,7 @@ nav{
 }
 
 .menu{
-    height: 50px;
+    height: 20px;
     background-color:$back;
     width: 200px;
 }
@@ -254,6 +266,11 @@ nav{
 
 /*footer*/
 
+.network{
+    text-align: center;
+    padding-top: 5%;
+}
+
 footer{
     
     background: url("images/separateur.png") repeat-x top;
@@ -262,9 +279,10 @@ footer{
     h2{
         text-align: center;
         margin-bottom: 0;
-        padding-top: 5%;
+        padding-top: 0;
         text-transform: uppercase;
         font-size: 16px;
+        margin-top: 1%;
     }
     
 }
@@ -491,6 +509,14 @@ input[type="submit" i]{
     .title p{
         font-size: 16px;
     }
+
+    .network{
+        padding-top: 3%;
+    }
+
+    footer h2{
+        margin-top: 0%;
+    }
 }
 @media screen and (min-width: 550px){
     /*header*/
@@ -603,6 +629,13 @@ input[type="submit" i]{
         margin-left: 40%;
     }
 
+    .network{
+        padding-top: 2%;
+    }
+    footer h2{
+        margin-top: 0;
+    }
+
     /*Pages produits*/
 
     button a{
@@ -689,9 +722,13 @@ input[type="submit" i]{
         }
     }
 
+    .network{
+        padding-top: 1.5%;
+    }
+
     footer h2{
         font-size: 20px;
-        padding-top: 2%;
+        padding-top: 0;
     }
 
     footer ul{
@@ -711,6 +748,10 @@ input[type="submit" i]{
             height: 40px;
             width: 60px;
         }
+    }
+
+    input[type="submit" i]{
+        padding-bottom: 1%;
     }
 
     
