modif basket icone

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -133,11 +133,13 @@ nav{
     text-align: right;
 
     img{
-        height: 40px;
-        width: 40px;
+        height: 30px;
+        width: 30px;
         margin-right: 2%;
+        margin-top: 5%;
     }
 }
+
 
 /*Menu déroulant burger*/
 
@@ -180,9 +182,10 @@ nav{
 }
 
 .menu{
-    height: 20px;
+    height: 30px;
     background-color:$back;
     width: 200px;
+    margin-bottom: 2%;
 }
 
 .menu a{
@@ -510,6 +513,12 @@ input[type="submit" i]{
         font-size: 16px;
     }
 
+    .icone_basket img{
+        margin-top: 3%;
+        height: 40px;
+        width: 40px;
+    }
+
     .network{
         padding-top: 3%;
     }
@@ -603,6 +612,10 @@ input[type="submit" i]{
         font-size: 20px;
     }
 
+    .icone_basket img{
+        margin-top: 2%;
+    }
+
     /*section*/
 
     .teddies{
@@ -691,6 +704,10 @@ input[type="submit" i]{
     
     .title p{
         font-size: 22px;
+    }
+
+    .icone_basket img{
+        margin-top: 1%;
     }
 
     /*section*/
