error margin icone

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -135,7 +135,7 @@ nav{
     img{
         height: 30px;
         width: 30px;
-        margin-right: 2%;
+        margin-right: 5%;
         margin-top: 5%;
     }
 }
@@ -552,6 +552,10 @@ input[type="submit" i]{
     }
     .firstmenu{
         padding-top: 10%;
+    }
+
+    .icone_basket img{
+        margin-right: 2%;
     }
 
     /*section*/
