--- a/style.css
+++ b/style.css
@@ -115,99 +115,11 @@ nav {
   margin-top: 5%;
 }
 
-/*Menu déroulant burger*/
-.toggle_btn {
-  height: 30px;
-  width: 30px;
-  position: relative;
-  float: left;
-  margin-left: 20px;
-  margin-top: 8px;
-  cursor: pointer;
-}
-
-.toggle_btn span {
-  height: 2.5px;
-  background-color: #B36E99;
-  width: 100%;
-  position: absolute;
-  top: 20px;
-  left: 0;
-}
-
-.toggle_btn span:before {
-  content: "";
-  height: 3px;
-  background-color: #B36E99;
-  width: 100%;
-  position: absolute;
-  top: -10px;
-  left: 0;
-}
-
-.toggle_btn span:after {
-  content: "";
-  height: 3px;
-  background-color: #B36E99;
-  width: 100%;
-  position: absolute;
-  top: 10px;
-  left: 0;
-}
-
-.menu {
-  height: 30px;
-  background-color: #F3E9F1;
-  width: 200px;
-  margin-bottom: 2%;
-}
-
-.menu a {
-  color: #B36E99;
-  text-align: center;
-  display: block;
-  height: auto;
-}
-
-.firstmenu {
-  padding-top: 20%;
-  text-transform: uppercase;
-  font-weight: bold;
-  font-size: 18px;
-  text-decoration: underline;
-  font-family: "Muli";
-}
-
-.nav {
-  margin-left: -200px;
-  transition-duration: 0.2s;
-  background: url("images/separateur.png") repeat-x bottom;
-}
-
-.nav_open {
-  margin-left: 0;
-  transition-duration: 0.2s;
-  height: auto;
-  width: 100%;
-}
-
-.nav_cross span {
-  background-color: transparent;
-}
-
-.nav_cross span:before {
-  transform: translateY(10px) rotateZ(45deg);
-}
-
-.nav_cross span:after {
-  transform: translateY(-9.5px) rotateZ(-45deg);
-}
-
 /*section*/
 .teddies {
   background-color: #CFD8DC;
   width: 280px;
-  height: 300px;
+  height: 350px;
   margin: auto;
   box-shadow: 1px 1px 10px 1px #BDBDBD;
   margin-top: 5%;
@@ -215,6 +127,7 @@ nav {
   border-radius: 10px;
 }
 .teddies img {
+  width: 243px;
   height: 160px;
   margin: 8% 4% 7% 7%;
   border-radius: 10px;
@@ -237,6 +150,16 @@ nav {
   width: 80px;
   height: 0.75px;
   background-color: #B36E99;
+}
+
+.see_more {
+  margin: auto;
+  display: block;
+  margin-top: 3%;
+  border-radius: 5px;
+  color: #F3E9F1;
+  background-color: #B36E99;
+  font-size: 16px;
 }
 
 /*footer*/
@@ -333,12 +256,12 @@ hr {
   padding-right: 4%;
 }
 
-.price {
+#price {
   font-weight: bold;
   font-size: 18px;
 }
 
-input[type=button i] {
+#add_basket {
   margin: auto;
   display: block;
   border-radius: 5px;
@@ -346,8 +269,15 @@ input[type=button i] {
   background-color: #B36E99;
   font-size: 20px;
   margin-top: 8%;
-  margin-bottom: 3%;
-  padding: 1% 3% 2% 3%;
+}
+
+#perso {
+  text-align: center;
+  margin-bottom: 5%;
+}
+
+#number {
+  text-align: center;
 }
 
 select {
@@ -364,6 +294,14 @@ label {
 /*Panier*/
 .required {
   color: red;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+td, th {
+  border: 1px solid black;
 }
 
 .infos {
@@ -482,6 +420,95 @@ input[type=submit i] {
     margin-top: 0%;
   }
 }
+@media screen and (max-width: 550px) {
+  /*Menu déroulant burger*/
+  .toggle_btn {
+    height: 30px;
+    width: 30px;
+    position: relative;
+    float: left;
+    margin-left: 20px;
+    margin-top: 8px;
+    cursor: pointer;
+  }
+
+  .toggle_btn span {
+    height: 2.5px;
+    background-color: #B36E99;
+    width: 100%;
+    position: absolute;
+    top: 20px;
+    left: 0;
+  }
+
+  .toggle_btn span:before {
+    content: "";
+    height: 3px;
+    background-color: #B36E99;
+    width: 100%;
+    position: absolute;
+    top: -10px;
+    left: 0;
+  }
+
+  .toggle_btn span:after {
+    content: "";
+    height: 3px;
+    background-color: #B36E99;
+    width: 100%;
+    position: absolute;
+    top: 10px;
+    left: 0;
+  }
+
+  .menu {
+    height: 30px;
+    background-color: #F3E9F1;
+    width: 200px;
+    margin-bottom: 2%;
+  }
+
+  .menu a {
+    color: #B36E99;
+    text-align: center;
+    display: block;
+    height: auto;
+  }
+
+  .firstmenu {
+    padding-top: 20%;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 18px;
+    text-decoration: underline;
+    font-family: "Muli";
+  }
+
+  .nav {
+    margin-left: -200px;
+    transition-duration: 0.2s;
+    background: url("images/separateur.png") repeat-x bottom;
+  }
+
+  .nav_open {
+    margin-left: 0;
+    transition-duration: 0.2s;
+    height: auto;
+    width: 100%;
+  }
+
+  .nav_cross span {
+    background-color: transparent;
+  }
+
+  .nav_cross span:before {
+    transform: translateY(10px) rotateZ(45deg);
+  }
+
+  .nav_cross span:after {
+    transform: translateY(-9.5px) rotateZ(-45deg);
+  }
+}
 @media screen and (min-width: 550px) {
   /*header*/
   .banner {
@@ -501,12 +528,24 @@ input[type=submit i] {
     font-size: 18px;
   }
 
+  ul {
+    display: flex;
+    justify-content: space-around;
+    margin-right: 10%;
+  }
+
   ul li {
     padding-bottom: 2%;
   }
 
+  header ul a {
+    color: #B36E99;
+    font-size: 18px;
+    font-weight: bold;
+  }
+
   .firstmenu {
-    padding-top: 10%;
+    display: none;
   }
 
   .icone_basket img {
@@ -537,13 +576,27 @@ input[type=submit i] {
     margin-left: 55%;
   }
 
+  .see_more {
+    margin-right: 12%;
+    margin-top: 2%;
+    margin-bottom: 4%;
+  }
+
   /*Pages produits*/
+  button {
+    margin-top: 1%;
+  }
+
   .bear {
     width: 500px;
   }
   .bear img {
     height: 200px;
     margin: 5% 20% 3% 20%;
+  }
+
+  #add_basket {
+    margin-top: 5.5%;
   }
 }
 @media screen and (min-width: 850px) {
@@ -565,8 +618,13 @@ input[type=submit i] {
     font-size: 20px;
   }
 
+  ul {
+    margin-right: 12%;
+  }
+
   .icone_basket img {
     margin-top: 2%;
+    margin-bottom: 2%;
   }
 
   /*section*/
@@ -594,6 +652,11 @@ input[type=submit i] {
     margin-left: 40%;
   }
 
+  .see_more {
+    margin-right: 21%;
+    margin-top: 1%;
+  }
+
   .network {
     padding-top: 2%;
   }
@@ -609,13 +672,13 @@ input[type=submit i] {
 
   .bear {
     width: 600px;
-    margin-top: -3%;
-    margin-bottom: 4%;
+    margin-top: 2.5%;
+    margin-bottom: 3%;
     /*footer*/
   }
   .bear img {
-    height: 260px;
-    margin: 5% 20% 3% 22%;
+    height: 300px;
+    margin: 5% 10% 3% 12.5%;
     border-radius: 10px;
   }
   .bear label {
@@ -648,6 +711,10 @@ input[type=submit i] {
     font-size: 22px;
   }
 
+  ul {
+    margin-right: 13%;
+  }
+
   .icone_basket img {
     margin-top: 1%;
   }
@@ -667,11 +734,19 @@ input[type=submit i] {
     margin-left: 40%;
   }
 
+  .see_more {
+    margin-right: 23.5%;
+  }
+
   /*Pages produits*/
+  button {
+    margin-top: 1%;
+  }
+
   .bear {
     width: 750px;
-    margin-top: -3%;
-    margin-bottom: 4%;
+    margin-top: 1%;
+    margin-bottom: 3%;
   }
   .bear img {
     height: 300px;
