--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -446,7 +446,7 @@
         }
     }
 
-    input[type="submit" i]{
+    #valid_order{
         margin: auto;
         display: block;
         border-radius: 5px;
@@ -454,11 +454,10 @@
         background-color:$back-button;
         font-size: 20px;
         margin-top: 0;
-        padding: 1% 3% 2% 3%;
         margin-bottom: 3%;
     }
 
-    .form{
+    #form{
         padding-left: 6%;
         padding-right: 6%;
         width:auto;
@@ -474,13 +473,35 @@
         }
     }
 
-    .form h3{
+    #form h3{
         text-decoration: underline;
         text-align: center;
         text-transform: uppercase;
         font-size: 18px;
     }
 
+    //Confirmation commande
+    
+    #confirm h2{
+        text-align: center;
+        font-size: 26px;
+        margin-top: 15%;
+    }
+
+    #confirm p{
+        text-align: center;
+        font-size: 16px;
+        margin-bottom: 10%;
+    }
+
+    #return_order{
+        margin: auto;
+        display: block;
+        border-radius: 5px;
+        color: $back;
+        font-size: 16px;
+        margin-bottom: 2%;
+    }
 
     @media screen and (min-width: 400px){
         /*header*/
@@ -922,6 +943,18 @@
             width: 100px;
         }
 
+        //Confirmation commande
+    
+        #confirm h2{
+            text-align: center;
+            font-size: 30px;
+        }
+
+        #confirm p{
+            text-align: center;
+            font-size: 20px;
+        }
+
 
     }
 
@@ -1041,6 +1074,18 @@
     
         #price_total_cart{
             width: 130px;
+        }
+
+        //Confirmation commande
+    
+        #confirm h2{
+            text-align: center;
+            font-size: 35px;
+        }
+
+        #confirm p{
+            text-align: center;
+            font-size: 20px;
         }
 
     }
