--- a/style.css
+++ b/style.css
@@ -411,7 +411,7 @@ label {
   padding-left: 6%;
 }
 
-input[type=submit i] {
+#valid_order {
   margin: auto;
   display: block;
   border-radius: 5px;
@@ -419,16 +419,15 @@ input[type=submit i] {
   background-color: #B36E99;
   font-size: 20px;
   margin-top: 0;
-  padding: 1% 3% 2% 3%;
   margin-bottom: 3%;
 }
 
-.form {
+#form {
   padding-left: 6%;
   padding-right: 6%;
   width: auto;
 }
-.form h2 {
+#form h2 {
   text-align: center;
   margin-top: 5%;
   text-transform: uppercase;
@@ -438,11 +437,32 @@ input[type=submit i] {
   margin-bottom: 2%;
 }
 
-.form h3 {
+#form h3 {
   text-decoration: underline;
   text-align: center;
   text-transform: uppercase;
   font-size: 18px;
+}
+
+#confirm h2 {
+  text-align: center;
+  font-size: 26px;
+  margin-top: 15%;
+}
+
+#confirm p {
+  text-align: center;
+  font-size: 16px;
+  margin-bottom: 10%;
+}
+
+#return_order {
+  margin: auto;
+  display: block;
+  border-radius: 5px;
+  color: #F3E9F1;
+  font-size: 16px;
+  margin-bottom: 2%;
 }
 
 @media screen and (min-width: 400px) {
@@ -870,6 +890,16 @@ input[type=submit i] {
   #price_total_cart {
     width: 100px;
   }
+
+  #confirm h2 {
+    text-align: center;
+    font-size: 30px;
+  }
+
+  #confirm p {
+    text-align: center;
+    font-size: 20px;
+  }
 }
 @media screen and (min-width: 1000px) {
   /*header*/
@@ -981,6 +1011,16 @@ input[type=submit i] {
 
   #price_total_cart {
     width: 130px;
+  }
+
+  #confirm h2 {
+    text-align: center;
+    font-size: 35px;
+  }
+
+  #confirm p {
+    text-align: center;
+    font-size: 20px;
   }
 }
 
