--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,5 +1,3 @@
-
-
     @font-face {
         font-family: 'belligerent_madnessregular';
         src: url('fonts/belligerent-webfont.eot');
@@ -46,10 +44,10 @@
     $back:#F3E9F1;
     $font:#290d22;
     $back-1:#CFD8DC;
+    $border-button: #757575;
     $back-button:#B36E99;
 
     /*All page*/
-
     *{
         font-family: 'Muli';
     }
@@ -120,27 +118,30 @@
     ul a:hover{
         text-decoration: underline $back-button;
         color: $back-button;
+        opacity: 0.70;
     }
 
     nav{
         background: url("images/separateur.png") repeat-x bottom;
         margin-top: 3%;
     }
-
+ 
     .icone_cart{
-        
         text-align: right;
+    }
 
-        img{
-            height: 30px;
-            width: 30px;
-            margin-right: 5%;
-            margin-top: 5%;
-        }
+    #cart_svg{
+        height: 30px;
+        width: 30px;
+        margin-right: 5%;
+        margin-top: 5%;
+    }
+
+    #cart_svg:hover{
+        opacity: 0.70;
     }
 
     /*section*/
-
     .teddies{
         background-color: $back-1;
         width:280px;
@@ -182,21 +183,35 @@
         margin: auto;
         display: block;
         margin-top: 3%;
-        border-radius: 5px;
+        border-radius: 25px;
         color: $back;
         background-color:$back-button;
         font-size: 16px;
-
+        border: 0.5px solid $border-button;
     }
-    /*footer*/
 
+    /*footer*/
     .network{
         text-align: center;
         padding-top: 5%;
     }
 
+    #icone_fb:hover{
+            transform: scale(1.20);
+            transition-duration: 400ms;
+    }
+
+    #icone_insta:hover{
+        transform: scale(1.20);
+        transition-duration: 400ms;
+    }
+
+    #icone_mail:hover{
+        transform: scale(1.20);
+        transition-duration: 400ms;
+    }
+
     footer{
-        
         background: url("images/separateur.png") repeat-x top;
         background-color:$back;
 
@@ -228,6 +243,8 @@
         margin-top: 0;
         margin-bottom: 0;
         padding-bottom: 5%;
+        color: $back-button;
+        font-weight: bold;
     }
 
     .pay{
@@ -236,18 +253,23 @@
     }
 
     /*Pages produits*/
-
     button{
         margin-left: 6%;
-        border-radius: 5px;
+        border-radius: 25px;
         background-color:$back-button;
         font-size: 15px;
         margin-top: 2%;
         margin-bottom: 0;
         padding: 0.25rem 1rem 0.4rem 1rem;
+        border: 0.5px solid $border-button;
 
         a{
             color: $back;
+        }
+
+        &:hover{
+            transform: scale(1.15);
+            transition-duration: 400ms;
         }
     }
 
@@ -295,11 +317,13 @@
     #add_cart{
         margin: auto;
         display: block;
-        border-radius: 5px;
+        border-radius: 25px;
         color: $back;
         background-color:$back-button;
         font-size: 20px;
         margin-top: 8%;
+        padding: 0.25rem 1rem 0.4rem 1rem;
+        border: 0.5px solid $border-button;
     }
 
     #perso{
@@ -329,7 +353,7 @@
         
         h2{
             text-align: center;
-            margin-top: 5%;
+            margin-top: 2%;
             text-transform: uppercase;
             font-size: 20px;
             color: $back-button;
@@ -350,14 +374,16 @@
         background-color: $back-1;
         box-shadow: 1px 1px 10px 1px #BDBDBD;
         border-radius: 10px;
-        // padding-bottom: 1%;
     }
 
     #array{
         display: flex;
         flex-direction: column;
+        justify-content: space-around;
         align-items: center;
         border-bottom: ridge $back;
+        border-top: ridge $back;
+        width: auto;
 
         td{
             font-size: 18px;
@@ -387,10 +413,11 @@
         margin: auto;
         display: block;
         margin-top: 3%;
-        border-radius: 5px;
+        border-radius: 25px;
         color: $back;
         background-color:$back-button;
         font-size: 16px;
+        border: 0.5px solid $border-button;
     }
 
     #cart_empty{
@@ -402,16 +429,14 @@
         font-weight: bold;
         padding-top: 3%;
         padding-bottom: 3%;
-
     }
 
     #price_total{
         display: block;
-        text-align: right;
+        text-align: center;
         color: $back-button;
         font-size: 20px;
-        border: ridge $back;
-        padding-right: 3%;
+        padding-right: 4.5%;
         margin-top: 1%;
         font-weight: bold;
     }
@@ -449,12 +474,19 @@
     #valid_order{
         margin: auto;
         display: block;
-        border-radius: 5px;
+        border-radius: 25px;
         color: $back;
         background-color:$back-button;
+        border: 0.5px solid $border-button;
         font-size: 20px;
-        margin-top: 0;
+        margin-top: -2%;
         margin-bottom: 3%;
+        padding: 0.25rem 1rem 0.4rem 1rem;
+
+        &:hover{
+            transform: scale(1.15);
+            transition-duration: 400ms;
+        }
     }
 
     #form{
@@ -480,8 +512,12 @@
         font-size: 18px;
     }
 
+    input{
+        border-radius: 10px;
+        border: 0.5px solid;
+    }
+
     //Confirmation commande
-    
     #confirm h2{
         text-align: center;
         font-size: 26px;
@@ -501,28 +537,28 @@
         color: $back;
         font-size: 16px;
         margin-bottom: 2%;
+        padding: 0.25rem 1rem 0.4rem 1rem;
+        border: 0.5px solid $border-button;
     }
 
     @media screen and (min-width: 400px){
         /*header*/
-
         .title{
             margin-top: 0;
         }
     }
-
+    
     @media screen and (min-width: 460px){
         /*header*/
-        
         .banner{
             padding-top: 3%;   
         }
-
+    
         .banner img{
             width: 110px;
             height: 110px;
         }
-
+    
         h1 a{
             font-size: 45px;
         }
@@ -530,25 +566,24 @@
         .title p{
             font-size: 16px;
         }
-
-        .icone_cart img{
+    
+        #cart_svg{
             margin-top: 3%;
             height: 40px;
             width: 40px;
         }
-
+    
         .network{
             padding-top: 3%;
         }
-
+    
         footer h2{
             margin-top: 0%;
         }
     }
-
+    
     @media screen and (max-width: 550px){
         /*Menu déroulant burger*/
-
     .toggle_btn{
         height: 30px;
         width: 30px;
@@ -558,7 +593,7 @@
         margin-top: 8px;
         cursor: pointer;    
     }
-
+    
     .toggle_btn span{
         height: 2.5px;
         background-color:$back-button;
@@ -567,7 +602,7 @@
         top: 20px;
         left: 0;
     }
-
+    
     .toggle_btn span:before{
         content: '';
         height: 3px;
@@ -586,21 +621,21 @@
         top: 10px;
         left: 0;
     }
-
+    
     .menu{
         height: 30px;
         background-color:$back;
         width: 200px;
         margin-bottom: 2%;
     }
-
+    
     .menu a{
         color: $back-button;
         text-align: center;
         display: block;
         height: auto;  
     }
-
+    
     .firstmenu{
         padding-top: 20%;
         text-transform: uppercase;
@@ -609,44 +644,44 @@
         text-decoration: underline;
         font-family: 'Muli';
     }
-
+    
     .nav{
         margin-left: -200px;
         transition-duration: 0.2s;
         background: url("images/separateur.png") repeat-x bottom;
     }
-
+    
     .nav_open{
         margin-left: 0;
         transition-duration: 0.2s;
         height: auto;
-        width: 100%;
-        
+        width: 100%; 
     }
-
+    
     .nav_cross span{
         background-color: transparent;
     }
-
+    
     .nav_cross span:before{
         transform: translateY(10px) rotateZ(45deg);
     }
+
     .nav_cross span:after{
         transform: translateY(-9.5px) rotateZ(-45deg);
     }
-    }
+}
+
     @media screen and (min-width: 550px){
         /*header*/
-        
         .banner{
             padding-top: 1%;   
         }
-
+    
         .banner img{
             width: 120px;
             height: 120px;
         }
-
+    
         h1 a{
             font-size: 50px;
         }
@@ -654,81 +689,78 @@
         .title p{
             font-size: 18px;
         }
-
+    
         header ul{
             display: flex;
             justify-content: space-around;
             margin-right: 10%;
         }
-
+    
         ul li{
             padding-bottom: 2%;
         }
-
+    
         header ul a {
             color: $back-button;
             font-size: 18px;
             font-weight: bold;
         }
-
+    
         .firstmenu{
             display: none;
         }
-
-        .icone_cart img{
+    
+        #cart_svg{
             margin-right: 2%;
         }
-
+    
         /*section*/
-
         .teddies{
             width:500px;
             height: 200px;
         }
-
+    
         .teddies img{
             margin: 4%;
         }
-
+    
         .teddies h2{
             margin-top: -34%;
             margin-left: 55%;
         }
-
+    
         .teddies hr{
             margin-left: 69.5%;
             margin-bottom: 2%;
         }
-
+    
         .teddies p{
             margin-left: 55%;
         }
-
+    
         .see_more{
             margin-right: 12%;
             margin-top: 2%;
             margin-bottom: 4%;
         }
         /*Pages produits*/
-
         button{
             margin-top: 2%;
         }
-
+    
         .bear{
             width: 500px;
-
+    
             img{
                 height: 200px;
                 margin: 5% 20% 3% 20%;
-
             }
         }
-
+    
         #add_cart{
             margin-top: 5.5%;
         }
-
+    
         // Panier
         #array{
             display: flex;
@@ -737,23 +769,28 @@
             align-items: center;
             vertical-align: middle;
             margin-left: 1%;
-            margin-right: 4%;
+            margin-right: 2%;
         }
-
+    
         #array td{
             font-size: 16px;
         }
-
+    
         #array img{
             width: 160px;
             height: 110px;
             margin: 1% 1% 1% 1%;
             border-radius: 10px;
         }
-
+    
+        #price_total{
+            display: block;
+            text-align: right;
+        }
+      
         #order{
             display: flex;
-            justify-content: space-between;
+            justify-content: space-around;
             background-color: $back;
             box-shadow: 1px 1px 10px 1px #BDBDBD;
             border-radius: 10px;
@@ -762,36 +799,34 @@
             font-weight: bold;
             padding-top: 1%;
             padding-bottom: 1%;
-        }
-
-        #article_cart{
-            width: 600px;
+            border-bottom: ridge $back;
+            width: auto;
         }
     
-        #name_cart{
-            width: 320px;         
+        #article_cart{
+            width: 200px;
+            text-align: right;
         }
     
         #color_cart{
-            width: 180px;
-        }
-    
-        #price_cart{
-            width: 130px;
+            width: 170px;
+            text-align: right;
         }
     
         #quantity_cart{
-            width: 100px;
+            width: 50px;
+            text-align: right;
         }
-    
-        #price_total_cart{
-            width: 130px;
+        
+        #price_cart{
+            width: 50px;
+            text-align: right;
+            margin-right: 1%;
         }
-
     }
+
     @media screen and (min-width: 850px){
         /*header*/
-
         .banner{
             padding-top: 0;
         }
@@ -800,7 +835,7 @@
             width: 130px;
             height: 130px;
         }
-
+    
         h1 a{
             font-size: 55px;
         }
@@ -808,60 +843,59 @@
         .title p{
             font-size: 20px;
         }
-
+    
         ul{
             margin-right: 12%;
         }
-
-        .icone_cart img{
+    
+        #cart_svg{
             margin-top: 2%;
             margin-bottom: 2%;
         }
-
-        /*section*/
-
+    
+        /*section*/ 
         .teddies{
             width:600px;
             height: 200px;
         }
-
+    
         .teddies img{
             margin: 3.5%;
         }
-
+    
         .teddies h2{
             margin-top: -28%;
             margin-left: 40%;
         }
-
+    
         .teddies hr{
             margin-top: -1%;
             margin-bottom: 2%;
             margin-left: 64%;
         }
-
+    
         .teddies p{
             margin-left: 40%;
         }
-
+    
         .see_more{
             margin-right: 21%;
             margin-top: 1%;
         }
-
+    
         .network{
             padding-top: 2%;
         }
+
         footer h2{
             margin-top: 0;
         }
-
+    
         /*Pages produits*/
-
         button a{
             font-size: 16px;
         }
-
+    
         .bear{
             width:600px;
             margin-top: 2.5%;
@@ -871,19 +905,18 @@
             height: 300px;
             margin: 5% 10% 3% 12.5%;
             border-radius: 10px;
+            }
         }
-        }
-
+    
         label{
             font-size: 18px;
         }
-
+    
         input[type="button" i]{
             font-size: 24px;
             margin-top: 8%;
             margin-bottom: 3%;
             padding: 1% 3% 2% 3%;
-            
         }
         
         select {
@@ -896,68 +929,51 @@
         #array td{
             font-size: 18px;
         }
-
+    
         #order{
             font-size: 18px;
         }
-
+    
         #array img{
             width: 230px;
             height: 160px;
             margin: 1% 1% 1% 1%;
             border-radius: 10px;
         }
-
-        .img_array{
-            width: 160px;
-        }
-        .name_array{
-            width: 140px;
-        }
-    
-        .color_array{
-            width: 120px;
-        }
-
+        
         #article_cart{
-            width: 340px;
-        }
-    
-        #name_cart{
-            width: 280px;         
+            width: 280px;
+            text-align: right;
         }
     
         #color_cart{
-            width: 150px;
-        }
-    
-        #price_cart{
-            width: 110px;
+            width: 200px;
+            text-align: right;
         }
     
         #quantity_cart{
-            width: 80px;
+            width: 50px;
+            text-align: right;
+        }
+        
+        #price_cart{
+            width: 50px;
+            text-align: right;
+            margin-right: 1%;
         }
     
-        #price_total_cart{
-            width: 100px;
-        }
-
         //Confirmation commande
-    
         #confirm h2{
             text-align: center;
             font-size: 30px;
         }
-
+    
         #confirm p{
             text-align: center;
             font-size: 20px;
         }
-
-
     }
-
+    
     @media screen and (min-width: 1000px){
         /*header*/
         
@@ -965,7 +981,7 @@
             width: 140px;
             height: 140px;
         }
-
+    
         h1 a{
             font-size: 60px;
         }
@@ -973,119 +989,140 @@
         .title p{
             font-size: 22px;
         }
-
-        ul{
-            margin-right: 13%;
+    
+        ul li{
+            margin-right: 2.5%;
         }
-
-        .icone_cart img{
+    
+        #cart_svg{
             margin-top: 1%;
         }
-
+    
         /*section*/
-
+    
         .teddies{
             width: 750px;
             height: 200px;
         }
-
+    
         .teddies img{
             margin: 2.5%;
         }
-
+    
         .teddies h2{
             margin-top: -22.5%;
             margin-left: 38.5%;
         }
-
+    
         .see_more{
             margin-right: 23.5%;
         }
-
+    
         /*Pages produits*/
-
+    
         button{
             margin-top: 1%;
         }
-
+    
         .bear{
             width:750px;
             margin-top: 1%;
             margin-bottom: 3%;
-
+    
             img{
                 height: 300px;
                 margin: 5% 22% 3% 20%;
             }
         }
-
+    
         .network{
             padding-top: 1.5%;
         }
-
+    
         footer h2{
             font-size: 20px;
             padding-top: 0;
         }
-
+    
         footer ul{
             font-size: 16px;
             padding-left: 10%;
         }
-
+    
         footer p{
             padding-bottom: 2%;
         }
-
+    
         .pay{
             padding-top: 1%;
             padding-bottom: 1%;
-
+    
             img{
                 height: 40px;
                 width: 60px;
             }
         }
-
+    
         input[type="submit" i]{
             padding-bottom: 1%;
         }
-
+    
         //Panier
         #article_cart{
-            width: 320px;
-        }
-    
-        #name_cart{
-            width: 320px;         
+            width: 280px;
+            text-align: right;
         }
     
         #color_cart{
-            width: 180px;
-        }
-    
-        #price_cart{
-            width: 130px;
+            width: 240px;
+            text-align: right;
         }
     
         #quantity_cart{
-            width: 100px;
+            width: 50px;
+            text-align: right;
+        }
+        
+        #price_cart{
+            width: 50px;
+            text-align: right;
+            margin-right: 1%;
         }
     
-        #price_total_cart{
-            width: 130px;
-        }
-
         //Confirmation commande
     
         #confirm h2{
             text-align: center;
             font-size: 35px;
         }
-
+    
         #confirm p{
             text-align: center;
             font-size: 20px;
         }
+    }
 
+    @media screen and (min-width: 1000px){
+
+        //Panier
+        #article_cart{
+            width: 280px;
+            text-align: right;
+        }
+    
+        #color_cart{
+            width: 360px;
+            text-align: right;
+        }
+    
+        #quantity_cart{
+            width: 130px;
+            text-align: right;
+        }
+        
+        #price_cart{
+            width: 120px;
+            text-align: right;
+            margin-right: 1%;
+        }
     }
